--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge.yml
@@ -232,7 +232,8 @@ ethernet_interfaces:
   peer_interface: Ethernet42
   ip_address: dhcp
   shutdown: false
-  type: routed
+  switchport:
+    enabled: false
   description: ATT_666_peer3_Ethernet42
   flow_tracker:
     hardware: FLOW-TRACKER
@@ -241,7 +242,8 @@ ethernet_interfaces:
   peer_type: l3_interface
   ip_address: 172.15.5.5/31
   shutdown: false
-  type: routed
+  switchport:
+    enabled: false
   description: Colt_10555
   ip_nat:
     service_profile: NAT-IE-DIRECT
@@ -249,7 +251,8 @@ ethernet_interfaces:
   peer_type: l3_interface
   ip_address: 172.15.5.6/31
   shutdown: false
-  type: routed
+  switchport:
+    enabled: false
   description: Colt_10555
   ip_nat:
     service_profile: NAT-IE-DIRECT
@@ -257,7 +260,8 @@ ethernet_interfaces:
   peer_type: l3_interface
   ip_address: 172.20.20.20/31
   shutdown: false
-  type: routed
+  switchport:
+    enabled: false
   description: Comcast-5G_AF830
 loopback_interfaces:
 - name: Loopback0
