--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge2B.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge2B.yml
@@ -295,7 +295,8 @@ ethernet_interfaces:
   peer_type: l3_interface
   ip_address: 172.15.6.6/31
   shutdown: false
-  type: routed
+  switchport:
+    enabled: false
   description: Colt_10423
 loopback_interfaces:
 - name: Loopback0
