--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-pathfinder1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-pathfinder1.yml
@@ -146,7 +146,8 @@ ethernet_interfaces:
   peer_type: l3_interface
   ip_address: 10.8.8.8/31
   shutdown: false
-  type: routed
+  switchport:
+    enabled: false
   description: Orange_888
 loopback_interfaces:
 - name: Loopback0
