--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/uplink_lan_wan_router2.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/uplink_lan_wan_router2.yml
@@ -111,7 +111,8 @@ ethernet_interfaces:
   peer_type: l2leaf
   description: UPLINK_LAN_L2LEAF_Ethernet2
   shutdown: false
-  type: routed
+  switchport:
+    enabled: false
   mtu: 9214
 - name: Ethernet2.10
   peer: uplink_lan_l2leaf
@@ -146,7 +147,8 @@ ethernet_interfaces:
   peer_type: l3_interface
   ip_address: 10.9.9.1/31
   shutdown: false
-  type: routed
+  switchport:
+    enabled: false
   description: Comcast_999
 loopback_interfaces:
 - name: Loopback0
