--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/autovpn-rr2.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/autovpn-rr2.yml
@@ -114,7 +114,8 @@ ethernet_interfaces:
   peer_type: l3_interface
   ip_address: 10.8.8.8/31
   shutdown: false
-  type: routed
+  switchport:
+    enabled: false
   description: ATT_888
 loopback_interfaces:
 - name: Loopback0
