--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-vrf-address-families.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-vrf-address-families.yml
@@ -36,6 +36,10 @@ router_bgp:
         ospf_route_type: nssa-external 2
       - source_protocol: isis
         rcf: Router_BGP_Isis()
+    neighbors:
+      - ip_address: aa::1
+        additional_paths:
+          receive: true
   address_family_flow_spec_ipv4:
     peer_groups:
       - name: FOOBAR
