--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/EVPN-MULTICAST-L3LEAF1B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/EVPN-MULTICAST-L3LEAF1B.cfg
@@ -48,7 +48,7 @@ service routing protocols model multi-agent
 !
 hostname EVPN-MULTICAST-L3LEAF1B
 !
-sflow vrf sflowvrf destination 10.10.10.12 1234
+sflow vrf sflow_vrf destination 10.10.10.12 1234
 sflow run
 !
 no spanning-tree vlan-id 4093-4094
