--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/EVPN-MULTICAST-L3LEAF1A.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/EVPN-MULTICAST-L3LEAF1A.yml
@@ -1756,7 +1756,7 @@ standard_access_lists:
 sflow:
   run: true
   vrfs:
-  - name: sflowvrf
+  - name: sflow_vrf
     destinations:
     - destination: 10.10.10.12
       port: 1234
