--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/node-type-l3-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/node-type-l3-interfaces.yml
@@ -114,7 +114,7 @@ static_routes:
 sflow:
   run: true
   vrfs:
-  - name: sflowvrf
+  - name: sflow_vrf
     destinations:
     - destination: 10.10.10.12
       port: 1234
