--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/node-type-l3-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/node-type-l3-interfaces.cfg
@@ -7,7 +7,7 @@ service routing protocols model multi-agent
 !
 hostname node-type-l3-interfaces
 !
-sflow vrf sflowvrf destination 10.10.10.12 1234
+sflow vrf sflow_vrf destination 10.10.10.12 1234
 sflow run
 !
 spanning-tree mode none
