--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/EVPN_MULTICAST_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/EVPN_MULTICAST_TESTS.yml
@@ -15,7 +15,7 @@ evpn_multicast: true
 sflow_settings:
   destinations:
     - destination: 10.10.10.12
-      vrf: sflowvrf
+      vrf: sflow_vrf
       port: 1234
 fabric_sflow:
   l3_interfaces: true
