--- a/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc1-svc-leaf1b-catalog.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc1-svc-leaf1b-catalog.yml
@@ -82,6 +82,24 @@ anta.tests.connectivity:
       custom_field: 'Local: Ethernet2 - Remote: dc1-spine2 Ethernet6'
 - VerifyReachability:
     hosts:
+    - destination: 10.33.255.20
+      repeat: 1
+      source: 10.33.255.21
+      vrf: default
+    result_overwrite:
+      custom_field: 'Source: P2P Interface Ethernet1 (IP: 10.33.255.21) - Destination:
+        dc1-spine1 Ethernet6 (IP: 10.33.255.20)'
+- VerifyReachability:
+    hosts:
+    - destination: 10.33.255.22
+      repeat: 1
+      source: 10.33.255.23
+      vrf: default
+    result_overwrite:
+      custom_field: 'Source: P2P Interface Ethernet2 (IP: 10.33.255.23) - Destination:
+        dc1-spine2 Ethernet6 (IP: 10.33.255.22)'
+- VerifyReachability:
+    hosts:
     - destination: 10.255.0.1
       repeat: 1
       source: 10.33.0.6
