--- a/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc1-wan2-catalog.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc1-wan2-catalog.yml
@@ -68,6 +68,24 @@ anta.tests.connectivity:
       custom_field: 'Local: Ethernet2 - Remote: dc1-leaf1b Ethernet7'
 - VerifyReachability:
     hosts:
+    - destination: 10.255.255.4
+      repeat: 1
+      source: 10.255.255.5
+      vrf: default
+    result_overwrite:
+      custom_field: 'Source: P2P Interface Ethernet1 (IP: 10.255.255.5) - Destination:
+        dc1-leaf1a Ethernet7 (IP: 10.255.255.4)'
+- VerifyReachability:
+    hosts:
+    - destination: 10.255.255.6
+      repeat: 1
+      source: 10.255.255.7
+      vrf: default
+    result_overwrite:
+      custom_field: 'Source: P2P Interface Ethernet2 (IP: 10.255.255.7) - Destination:
+        dc1-leaf1b Ethernet7 (IP: 10.255.255.6)'
+- VerifyReachability:
+    hosts:
     - destination: 10.255.1.1
       repeat: 1
       source: 10.255.1.2
