--- a/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc2-leaf1b-catalog.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc2-leaf1b-catalog.yml
@@ -89,6 +89,24 @@ anta.tests.connectivity:
       custom_field: 'Local: Ethernet8 - Remote: dc2-leaf1c Ethernet2'
 - VerifyReachability:
     hosts:
+    - destination: 10.255.255.108
+      repeat: 1
+      source: 10.255.255.109
+      vrf: default
+    result_overwrite:
+      custom_field: 'Source: P2P Interface Ethernet1 (IP: 10.255.255.109) - Destination:
+        dc2-spine1 Ethernet2 (IP: 10.255.255.108)'
+- VerifyReachability:
+    hosts:
+    - destination: 10.255.255.110
+      repeat: 1
+      source: 10.255.255.111
+      vrf: default
+    result_overwrite:
+      custom_field: 'Source: P2P Interface Ethernet2 (IP: 10.255.255.111) - Destination:
+        dc2-spine2 Ethernet2 (IP: 10.255.255.110)'
+- VerifyReachability:
+    hosts:
     - destination: 10.255.0.1
       repeat: 1
       source: 10.255.128.14
