--- a/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc2-leaf2a-catalog.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc2-leaf2a-catalog.yml
@@ -96,6 +96,33 @@ anta.tests.connectivity:
       custom_field: 'Local: Ethernet6 - Remote: dc1-leaf2a Ethernet6'
 - VerifyReachability:
     hosts:
+    - destination: 10.255.255.112
+      repeat: 1
+      source: 10.255.255.113
+      vrf: default
+    result_overwrite:
+      custom_field: 'Source: P2P Interface Ethernet1 (IP: 10.255.255.113) - Destination:
+        dc2-spine1 Ethernet3 (IP: 10.255.255.112)'
+- VerifyReachability:
+    hosts:
+    - destination: 10.255.255.114
+      repeat: 1
+      source: 10.255.255.115
+      vrf: default
+    result_overwrite:
+      custom_field: 'Source: P2P Interface Ethernet2 (IP: 10.255.255.115) - Destination:
+        dc2-spine2 Ethernet3 (IP: 10.255.255.114)'
+- VerifyReachability:
+    hosts:
+    - destination: 192.168.100.0
+      repeat: 1
+      source: 192.168.100.1
+      vrf: default
+    result_overwrite:
+      custom_field: 'Source: P2P Interface Ethernet6 (IP: 192.168.100.1) - Destination:
+        dc1-leaf2a Ethernet6 (IP: 192.168.100.0)'
+- VerifyReachability:
+    hosts:
     - destination: 10.255.0.1
       repeat: 1
       source: 10.255.128.15
