--- a/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc2-leaf2b-catalog.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc2-leaf2b-catalog.yml
@@ -89,6 +89,24 @@ anta.tests.connectivity:
       custom_field: 'Local: Ethernet8 - Remote: dc2-leaf2c Ethernet2'
 - VerifyReachability:
     hosts:
+    - destination: 10.255.255.116
+      repeat: 1
+      source: 10.255.255.117
+      vrf: default
+    result_overwrite:
+      custom_field: 'Source: P2P Interface Ethernet1 (IP: 10.255.255.117) - Destination:
+        dc2-spine1 Ethernet4 (IP: 10.255.255.116)'
+- VerifyReachability:
+    hosts:
+    - destination: 10.255.255.118
+      repeat: 1
+      source: 10.255.255.119
+      vrf: default
+    result_overwrite:
+      custom_field: 'Source: P2P Interface Ethernet2 (IP: 10.255.255.119) - Destination:
+        dc2-spine2 Ethernet4 (IP: 10.255.255.118)'
+- VerifyReachability:
+    hosts:
     - destination: 10.255.0.1
       repeat: 1
       source: 10.255.128.16
