--- a/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc2-leaf3a.arista.com-catalog.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc2-leaf3a.arista.com-catalog.yml
@@ -82,6 +82,24 @@ anta.tests.connectivity:
       custom_field: 'Local: Ethernet2 - Remote: dc2-spine2 Ethernet5'
 - VerifyReachability:
     hosts:
+    - destination: 10.255.255.120
+      repeat: 1
+      source: 10.255.255.121
+      vrf: default
+    result_overwrite:
+      custom_field: 'Source: P2P Interface Ethernet1 (IP: 10.255.255.121) - Destination:
+        dc2-spine1 Ethernet5 (IP: 10.255.255.120)'
+- VerifyReachability:
+    hosts:
+    - destination: 10.255.255.122
+      repeat: 1
+      source: 10.255.255.123
+      vrf: default
+    result_overwrite:
+      custom_field: 'Source: P2P Interface Ethernet2 (IP: 10.255.255.123) - Destination:
+        dc2-spine2 Ethernet5 (IP: 10.255.255.122)'
+- VerifyReachability:
+    hosts:
     - destination: 10.255.0.1
       repeat: 1
       source: 10.255.128.17
@@ -309,6 +327,24 @@ anta.tests.interfaces:
       custom_field: Interface Ethernet11 - dc2-leaf3-fw1_e1 = 'up'
 - VerifyInterfacesStatus:
     interfaces:
+    - name: Ethernet12
+      status: up
+    result_overwrite:
+      custom_field: Interface Ethernet12 - Test_mode_and_vlans = 'up'
+- VerifyInterfacesStatus:
+    interfaces:
+    - name: Ethernet13
+      status: up
+    result_overwrite:
+      custom_field: Interface Ethernet13 - Test_native_vlan_and_trunk_groups = 'up'
+- VerifyInterfacesStatus:
+    interfaces:
+    - name: Ethernet14
+      status: up
+    result_overwrite:
+      custom_field: Interface Ethernet14 - Test_phone = 'up'
+- VerifyInterfacesStatus:
+    interfaces:
     - name: Port-Channel3
       status: up
     result_overwrite:
@@ -320,6 +356,25 @@ anta.tests.interfaces:
       status: up
     result_overwrite:
       custom_field: Interface Port-Channel11 - dc2-leaf3-fw1_PortChannel = 'up'
+- VerifyInterfacesStatus:
+    interfaces:
+    - name: Port-Channel12
+      status: up
+    result_overwrite:
+      custom_field: Interface Port-Channel12 - Test_mode_and_vlans = 'up'
+- VerifyInterfacesStatus:
+    interfaces:
+    - name: Port-Channel13
+      status: up
+    result_overwrite:
+      custom_field: Interface Port-Channel13 - Test_native_vlan_and_trunk_groups =
+        'up'
+- VerifyInterfacesStatus:
+    interfaces:
+    - name: Port-Channel14
+      status: up
+    result_overwrite:
+      custom_field: Interface Port-Channel14 - Test_phone = 'up'
 - VerifyInterfacesStatus:
     interfaces:
     - name: Vlan4093
