--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-vrf-address-families.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-vrf-address-families.cfg
@@ -103,6 +103,7 @@ router bgp 65001
       address-family ipv6 multicast
          bgp missing-policy direction in action deny
          bgp missing-policy direction out action deny
+         bgp additional-paths receive
          network ff08:1::/64
          redistribute connected
          redistribute ospf match external
