Feat(eos_designs): Add support to enable sflow on l3 interfaces (#4444)

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/EVPN-MULTICAST-L3LEAF3A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/EVPN-MULTICAST-L3LEAF3A.cfg
@@ -48,6 +48,9 @@ service routing protocols model multi-agent
 !
 hostname EVPN-MULTICAST-L3LEAF3A
 !
+sflow vrf sflow_vrf destination 10.10.10.12 1234
+sflow run
+!
 no enable password
 no aaa root
 !
@@ -223,6 +226,7 @@ interface Ethernet7.10
    encapsulation dot1q vlan 10
    vrf TEN_E_PEG_L3_MULTICAST_ENABLED
    ip address 10.1.51.4/31
+   sflow enable
 !
 interface Ethernet8
    no shutdown
@@ -230,6 +234,7 @@ interface Ethernet8
    vrf TEN_E_PEG_L3_MULTICAST_ENABLED
    ip address 10.1.51.4/31
    pim ipv4 sparse-mode
+   sflow enable
 !
 interface Ethernet9
    no shutdown
@@ -237,6 +242,7 @@ interface Ethernet9
    vrf TEN_E_L3_MULTICAST_TRANSIT
    ip address 10.2.52.0/31
    pim ipv4 sparse-mode
+   sflow enable
 !
 interface Loopback0
    description ROUTER_ID
