--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/host_vars/node-type-l3-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/host_vars/node-type-l3-interfaces.yml
@@ -43,3 +43,12 @@ l3_interface_profiles:
           input: TEST_POLICY
     raw_eos_cli: |
       ! TEST RAW_EOS_CLI
+
+# Test for sflow on l3_interfaces from node_type
+sflow_settings:
+  destinations:
+    - destination: 10.10.10.12
+      vrf: sflow_vrf
+      port: 1234
+fabric_sflow:
+  l3_interfaces: true
