--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/node-type-l3-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/node-type-l3-interfaces.yml
@@ -59,6 +59,8 @@ ethernet_interfaces:
   eos_cli: '! TEST RAW_EOS_CLI
 
     '
+  sflow:
+    enable: true
   service_policy:
     qos:
       input: TEST_POLICY
@@ -69,6 +71,8 @@ ethernet_interfaces:
   shutdown: false
   type: routed
   description: peer2
+  sflow:
+    enable: true
   dhcp_client_accept_default_route: true
 - name: Ethernet42
   peer_type: l3_interface
@@ -77,12 +81,16 @@ ethernet_interfaces:
   shutdown: true
   type: routed
   description: This is a custom description
+  sflow:
+    enable: true
   dhcp_client_accept_default_route: true
 - name: Ethernet43
   peer_type: l3_interface
   ip_address: 192.168.42.42/24
   shutdown: true
   type: routed
+  sflow:
+    enable: true
 loopback_interfaces:
 - name: Loopback0
   description: ROUTER_ID
@@ -103,3 +111,10 @@ route_maps:
 static_routes:
 - destination_address_prefix: 0.0.0.0/0
   gateway: 192.168.1.3
+sflow:
+  run: true
+  vrfs:
+  - name: sflow_vrf
+    destinations:
+    - destination: 10.10.10.12
+      port: 1234
