Adding few more lines in templates and schema.

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-vrf-address-families.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/router-bgp-vrf-address-families.cfg
@@ -35,6 +35,8 @@ router bgp 65001
    !
    vrf VRF01
       no bgp redistribute-internal
+      bgp additional-paths receive
+      bgp additional-path send any
       !
       address-family flow-spec ipv4
          bgp missing-policy direction in action permit
@@ -112,6 +114,8 @@ router bgp 65001
          redistribute static route-map VRF_AFIPV6MULTI_RM_STATIC
    !
    vrf VRF02
+      neighbor 1.1.1.1 additional-paths receive
+      neighbor 1.1.1.1 additional-paths send ecmp limit 24
       !
       address-family ipv4
          bgp additional-paths send backup
