Fix(eos_designs): Do not filter AVT on HA device if one path-group is present on peer

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2A.cfg
@@ -55,6 +55,9 @@ router adaptive-virtual-topology
       match application-profile VIDEO
          avt profile PROD-AVT-POLICY-VIDEO
       !
+      match application-profile MPLS-ONLY
+         avt profile PROD-AVT-POLICY-MPLS-ONLY
+      !
       match application-profile default
          avt profile PROD-AVT-POLICY-DEFAULT
    !
@@ -72,6 +75,9 @@ router adaptive-virtual-topology
    !
    profile PROD-AVT-POLICY-DEFAULT
       path-selection load-balance LB-PROD-AVT-POLICY-DEFAULT
+   !
+   profile PROD-AVT-POLICY-MPLS-ONLY
+      path-selection load-balance LB-PROD-AVT-POLICY-MPLS-ONLY
    !
    profile PROD-AVT-POLICY-VIDEO
       path-selection load-balance LB-PROD-AVT-POLICY-VIDEO
@@ -99,6 +105,7 @@ router adaptive-virtual-topology
       avt profile PROD-AVT-POLICY-DEFAULT id 1
       avt profile PROD-AVT-POLICY-VOICE id 2
       avt profile PROD-AVT-POLICY-VIDEO id 4
+      avt profile PROD-AVT-POLICY-MPLS-ONLY id 5
 !
 router path-selection
    tcp mss ceiling ipv4 ingress
@@ -147,6 +154,9 @@ router path-selection
    !
    load-balance policy LB-PROD-AVT-POLICY-DEFAULT
       path-group INET
+      path-group LAN_HA
+   !
+   load-balance policy LB-PROD-AVT-POLICY-MPLS-ONLY
       path-group LAN_HA
    !
    load-balance policy LB-PROD-AVT-POLICY-VIDEO
@@ -320,6 +330,8 @@ application traffic recognition
    !
    application-profile APP-PROFILE-CONTROL-PLANE
       application APP-CONTROL-PLANE
+   !
+   application-profile MPLS-ONLY
    !
    application-profile VIDEO
       application CUSTOM-APPLICATION-1
