--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CV_PATHFINDER_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CV_PATHFINDER_TESTS.yml
@@ -94,6 +94,8 @@ wan_router:
   # Testing HA and disabling HA
   node_groups:
     # SITE_HA_DISABLED
+    # Because HA is disabled, this allow to test that MPLS-ONLY, present on
+    # cv-pathfinder-edge is not configured on cv-pathfinder-edge1
     - group: Site511
       uplink_type: p2p-vrfs
       uplink_switches: [ site-ha-disabled-leaf ]
@@ -204,6 +206,9 @@ wan_router:
                 peer_as: 64520
                 ipv4_prefix_list_out: PL2
     # SITE_HA_ENABLED
+    # Because HA is enabled, this allow to test that MPLS-ONLY, present on
+    # cv-pathfinder-edge2B (because of Colt) is being configured on cv-pathfinder-edge2A
+    # with only LAN_HA path-group.
     - group: Site423
       cv_pathfinder_region: AVD_Land_West
       cv_pathfinder_site: Site423
@@ -547,7 +552,8 @@ wan_virtual_topologies:
           internet_exit:
             policy: ZSCALER-EXIT-POLICY-2
           id: 4
-        # This will not be rendered on devices without MPLS
+        # This will not be rendered on devices without MPLS except if their HA
+        # peer have MPLS.
         - application_profile: MPLS-ONLY
           path_groups:
             - names: [MPLS]
