--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/tasks/main.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/tasks/main.yml
@@ -14,7 +14,9 @@
   register: avd_requirements
 
 - name: Generate eos intended configuration and device documentation
-  when: eos_cli_config_gen_configuration.enable | default(true) or eos_cli_config_gen_documentation.enable | default(generate_device_documentation, true)
+  when: >-
+      eos_cli_config_gen_configuration.enable | default(true) or
+      (eos_cli_config_gen_documentation.enable | arista.avd.default(generate_device_documentation, true))
   arista.avd.eos_cli_config_gen:
     structured_config_filename: "{{ structured_config_filename }}"
     config_filename: "{{ eos_config_dir }}/{{ inventory_hostname }}.cfg"
@@ -22,7 +24,7 @@
     read_structured_config_from_file: "{{ structured_config is not arista.avd.defined }}"
     validation_mode: "{{ avd_data_validation_mode }}"
     generate_device_config: "{{ eos_cli_config_gen_configuration.enable | default(true) }}"
-    generate_device_doc: "{{ eos_cli_config_gen_documentation.enable | default(generate_device_documentation, true) }}"
+    generate_device_doc: "{{ eos_cli_config_gen_documentation.enable | arista.avd.default(generate_device_documentation, true) }}"
     device_doc_toc: true
     cprofile_file: "{{ eos_cli_config_gen_cprofile_file | default(omit) }}"
   delegate_to: localhost
