--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2A.cfg
@@ -63,6 +63,9 @@ router adaptive-virtual-topology
       match application-profile VIDEO
          avt profile PROD-AVT-POLICY-VIDEO
       !
+      match application-profile MPLS-ONLY
+         avt profile PROD-AVT-POLICY-MPLS-ONLY
+      !
       match application-profile default
          avt profile PROD-AVT-POLICY-DEFAULT
    !
@@ -80,6 +83,9 @@ router adaptive-virtual-topology
    !
    profile PROD-AVT-POLICY-DEFAULT
       path-selection load-balance LB-PROD-AVT-POLICY-DEFAULT
+   !
+   profile PROD-AVT-POLICY-MPLS-ONLY
+      path-selection load-balance LB-PROD-AVT-POLICY-MPLS-ONLY
    !
    profile PROD-AVT-POLICY-VIDEO
       path-selection load-balance LB-PROD-AVT-POLICY-VIDEO
@@ -107,6 +113,7 @@ router adaptive-virtual-topology
       avt profile PROD-AVT-POLICY-DEFAULT id 1
       avt profile PROD-AVT-POLICY-VOICE id 2
       avt profile PROD-AVT-POLICY-VIDEO id 4
+      avt profile PROD-AVT-POLICY-MPLS-ONLY id 5
 !
 router path-selection
    tcp mss ceiling ipv4 ingress
@@ -155,6 +162,9 @@ router path-selection
    !
    load-balance policy LB-PROD-AVT-POLICY-DEFAULT
       path-group INET
+      path-group LAN_HA
+   !
+   load-balance policy LB-PROD-AVT-POLICY-MPLS-ONLY
       path-group LAN_HA
    !
    load-balance policy LB-PROD-AVT-POLICY-VIDEO
@@ -331,6 +341,8 @@ application traffic recognition
    !
    application-profile APP-PROFILE-CONTROL-PLANE
       application APP-CONTROL-PLANE
+   !
+   application-profile MPLS-ONLY
    !
    application-profile VIDEO
       application CUSTOM-APPLICATION-1
