Refactor(eos_designs)!: Rename wan_mode 'autovpn' to 'legacy-autovpn'

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/legacy-autovpn-rr1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/legacy-autovpn-rr1.cfg
@@ -23,7 +23,7 @@ flow tracking hardware
 !
 service routing protocols model multi-agent
 !
-hostname autovpn-rr1
+hostname legacy-autovpn-rr1
 !
 router path-selection
    peer dynamic source stun
@@ -35,7 +35,7 @@ router path-selection
       local interface Ethernet1
       !
       peer static router-ip 192.168.131.2
-         name autovpn-rr2
+         name legacy-autovpn-rr2
          ipv4 address 10.8.8.8
    !
    path-group LTE id 102
@@ -119,7 +119,7 @@ interface Loopback0
    ip address 192.168.31.1/32
 !
 interface Vxlan1
-   description autovpn-rr1_VTEP
+   description legacy-autovpn-rr1_VTEP
    vxlan source-interface Dps1
    vxlan udp-port 4789
    vxlan vrf default vni 1
@@ -187,7 +187,7 @@ router bgp 65000
    neighbor WAN-RR-OVERLAY-PEERS send-community
    neighbor WAN-RR-OVERLAY-PEERS maximum-routes 0
    neighbor 192.168.131.2 peer group WAN-RR-OVERLAY-PEERS
-   neighbor 192.168.131.2 description autovpn-rr2
+   neighbor 192.168.131.2 description legacy-autovpn-rr2
    redistribute connected route-map RM-CONN-2-BGP
    !
    address-family evpn
