--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/LEGACY_AUTOVPN_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/LEGACY_AUTOVPN_TESTS.yml
@@ -1,6 +1,6 @@
 ---
-# Testing autovpn
-wan_mode: autovpn
+# Testing legacy-autovpn
+wan_mode: legacy-autovpn
 # Disabling underlay for tests
 underlay_routing_protocol: none
 
@@ -16,13 +16,13 @@ wan_stun_dtls_disable: true
 
 wan_route_servers:
   # Testing having the interface configured with DHCP
-  - hostname: autovpn-rr1
+  - hostname: legacy-autovpn-rr1
     path_groups:
       - name: INET
         interfaces:
           - name: Ethernet1
             public_ip: 10.7.7.7
-  - hostname: autovpn-rr2
+  - hostname: legacy-autovpn-rr2
 
 wan_ipsec_profiles:
   control_plane:
@@ -34,10 +34,10 @@ wan_ipsec_profiles:
 default_node_types:
   - node_type: wan_rr
     match_hostnames:
-      - "autovpn-rr.*"
+      - "legacy-autovpn-rr.*"
   - node_type: wan_router
     match_hostnames:
-      - "autovpn-edge"
+      - "legacy-autovpn-edge"
 
 wan_router:
   defaults:
@@ -47,7 +47,7 @@ wan_router:
       # TODO find a way to not need this
       always_include_vrfs_in_tenants: [TenantA]
   nodes:
-    - name: autovpn-edge
+    - name: legacy-autovpn-edge
       id: 1
       l3_interfaces:
         - name: Ethernet1
@@ -66,7 +66,7 @@ wan_rr:
     vtep_loopback_ipv4_pool: 192.168.131.0/24
     data_plane_cpu_allocation_max: 2
   nodes:
-    - name: autovpn-rr1
+    - name: legacy-autovpn-rr1
       id: 1
       l3_interfaces:
         - name: Ethernet1
@@ -74,7 +74,7 @@ wan_rr:
           wan_circuit_id: 777
           ip_address: dhcp
           dhcp_accept_default_route: true
-    - name: autovpn-rr2
+    - name: legacy-autovpn-rr2
       id: 2
       l3_interfaces:
         - name: Ethernet1
