--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
@@ -350,11 +350,11 @@ all:
             TEST-MGMT-GATEWAY-IN-NODE-GROUP:
         WAN_TESTS:
           children:
-            AUTOVPN_TESTS:
+            LEGACY_AUTOVPN_TESTS:
               hosts:
-                autovpn-rr1:
-                autovpn-rr2:
-                autovpn-edge:
+                legacy-autovpn-rr1:
+                legacy-autovpn-rr2:
+                legacy-autovpn-edge:
             CV_PATHFINDER_TESTS:
               children:
                 SITE_HA_ENABLED:
@@ -396,7 +396,7 @@ all:
                         cv-pathfinder-custom-control-plane-policy-edge-3:
             WAN_UNIT_TESTS:
               hosts:
-                autovpn-edge-no-default-policy:
+                legacy-autovpn-edge-no-default-policy:
                 cv-pathfinder-edge-no-default-policy:
                 cv-pathfinder-edge-custom-default-policy:
         UPLINK_P2P_VRFS_TESTS:
