--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/legacy-autovpn-edge-no-default-policy.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/legacy-autovpn-edge-no-default-policy.cfg
@@ -23,7 +23,7 @@ flow tracking hardware
 !
 service routing protocols model multi-agent
 !
-hostname autovpn-edge-no-default-policy
+hostname legacy-autovpn-edge-no-default-policy
 !
 router path-selection
    tcp mss ceiling ipv4 ingress
@@ -32,12 +32,12 @@ router path-selection
       ipsec profile AUTOVPN
       !
       local interface Ethernet1
-         stun server-profile INET-autovpn-rr3-Ethernet1
+         stun server-profile INET-legacy-autovpn-rr3-Ethernet1
       !
       peer dynamic
       !
       peer static router-ip 2.2.2.2
-         name autovpn-rr3
+         name legacy-autovpn-rr3
          ipv4 address 10.7.7.7
    !
    load-balance policy LB-DEFAULT-POLICY-CONTROL-PLANE
@@ -116,7 +116,7 @@ interface Loopback0
    ip address 192.168.30.1/32
 !
 interface Vxlan1
-   description autovpn-edge-no-default-policy_VTEP
+   description legacy-autovpn-edge-no-default-policy_VTEP
    vxlan source-interface Dps1
    vxlan udp-port 4789
    vxlan vrf default vni 1
@@ -177,7 +177,7 @@ router bgp 65000
    neighbor WAN-OVERLAY-PEERS send-community
    neighbor WAN-OVERLAY-PEERS maximum-routes 0
    neighbor 2.2.2.2 peer group WAN-OVERLAY-PEERS
-   neighbor 2.2.2.2 description autovpn-rr3
+   neighbor 2.2.2.2 description legacy-autovpn-rr3
    redistribute connected route-map RM-CONN-2-BGP
    !
    address-family evpn
@@ -215,7 +215,7 @@ router bgp 65000
 !
 stun
    client
-      server-profile INET-autovpn-rr3-Ethernet1
+      server-profile INET-legacy-autovpn-rr3-Ethernet1
          ip address 10.7.7.7
          ssl profile STUN-DTLS
 !
