--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/legacy-autovpn-rr1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/legacy-autovpn-rr1.yml
@@ -1,8 +1,8 @@
-hostname: autovpn-rr2
+hostname: legacy-autovpn-rr1
 is_deployed: true
 router_bgp:
   as: '65000'
-  router_id: 192.168.31.2
+  router_id: 192.168.31.1
   bgp:
     default:
       ipv4_unicast: false
@@ -13,7 +13,7 @@ router_bgp:
   redistribute_routes:
   - source_protocol: connected
     route_map: RM-CONN-2-BGP
-  bgp_cluster_id: 192.168.31.2
+  bgp_cluster_id: 192.168.31.1
   listen_ranges:
   - prefix: 192.168.130.0/24
     peer_group: WAN-OVERLAY-PEERS
@@ -72,13 +72,13 @@ router_bgp:
         send:
           any: true
   neighbors:
-  - ip_address: 192.168.131.1
+  - ip_address: 192.168.131.2
     peer_group: WAN-RR-OVERLAY-PEERS
-    peer: autovpn-rr1
-    description: autovpn-rr1
+    peer: legacy-autovpn-rr2
+    description: legacy-autovpn-rr2
   vrfs:
   - name: default
-    rd: 192.168.31.2:1
+    rd: 192.168.31.1:1
     route_targets:
       import:
       - address_family: evpn
@@ -112,15 +112,16 @@ management_api_http:
 ethernet_interfaces:
 - name: Ethernet1
   peer_type: l3_interface
-  ip_address: 10.8.8.8/31
+  ip_address: dhcp
   shutdown: false
   type: routed
-  description: ATT_888
+  description: ATT_777
+  dhcp_client_accept_default_route: true
 loopback_interfaces:
 - name: Loopback0
   description: ROUTER_ID
   shutdown: false
-  ip_address: 192.168.31.2/32
+  ip_address: 192.168.31.1/32
 prefix_lists:
 - name: PL-LOOPBACKS-EVPN-OVERLAY
   sequence_numbers:
@@ -134,16 +135,13 @@ route_maps:
     match:
     - ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
     set:
-    - extcommunity soo 192.168.31.2:0 additive
+    - extcommunity soo 192.168.31.1:0 additive
 - name: RM-EVPN-EXPORT-VRF-DEFAULT
   sequence_numbers:
   - sequence: 10
     type: permit
     match:
     - extcommunity ECL-EVPN-SOO
-static_routes:
-- destination_address_prefix: 0.0.0.0/0
-  gateway: 10.8.8.9
 agents:
 - name: KernelFib
   environment_variables:
@@ -153,11 +151,11 @@ ip_extcommunity_lists:
 - name: ECL-EVPN-SOO
   entries:
   - type: permit
-    extcommunities: soo 192.168.31.2:0
+    extcommunities: soo 192.168.31.1:0
 ip_security:
   ike_policies:
   - name: AUTOVPN-IKE
-    local_id: 192.168.131.2
+    local_id: 192.168.131.1
   sa_policies:
   - name: AUTOVPN-SA
   profiles:
@@ -187,10 +185,10 @@ router_path_selection:
     local_interfaces:
     - name: Ethernet1
     static_peers:
-    - router_ip: 192.168.131.1
-      name: autovpn-rr1
+    - router_ip: 192.168.131.2
+      name: legacy-autovpn-rr2
       ipv4_addresses:
-      - 10.7.7.7
+      - 10.8.8.8
     ipsec_profile: AUTOVPN
   - name: LTE
     id: 102
@@ -259,17 +257,17 @@ application_traffic_recognition:
     ipv4_prefixes:
     - name: PFX-LOCAL-VTEP-IP
       prefix_values:
-      - 192.168.131.2/32
+      - 192.168.131.1/32
 dps_interfaces:
 - name: Dps1
   description: DPS Interface
   mtu: 9194
-  ip_address: 192.168.131.2/32
+  ip_address: 192.168.131.1/32
   flow_tracker:
     hardware: FLOW-TRACKER
 vxlan_interface:
   vxlan1:
-    description: autovpn-rr2_VTEP
+    description: legacy-autovpn-rr1_VTEP
     vxlan:
       udp_port: 4789
       source_interface: Dps1
