--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/legacy-autovpn-rr2.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/legacy-autovpn-rr2.yml
@@ -1,8 +1,8 @@
-hostname: autovpn-edge-no-default-policy
+hostname: legacy-autovpn-rr2
 is_deployed: true
 router_bgp:
   as: '65000'
-  router_id: 192.168.30.1
+  router_id: 192.168.31.2
   bgp:
     default:
       ipv4_unicast: false
@@ -13,6 +13,11 @@ router_bgp:
   redistribute_routes:
   - source_protocol: connected
     route_map: RM-CONN-2-BGP
+  bgp_cluster_id: 192.168.31.2
+  listen_ranges:
+  - prefix: 192.168.130.0/24
+    peer_group: WAN-OVERLAY-PEERS
+    remote_as: '65000'
   peer_groups:
   - name: WAN-OVERLAY-PEERS
     type: wan
@@ -23,23 +28,43 @@ router_bgp:
     maximum_routes: 0
     remote_as: '65000'
     ttl_maximum_hops: 1
+    route_reflector_client: true
     bfd_timers:
       interval: 1000
       min_rx: 1000
       multiplier: 10
+  - name: WAN-RR-OVERLAY-PEERS
+    type: wan
+    update_source: Dps1
+    bfd: true
+    send_community: all
+    maximum_routes: 0
+    remote_as: '65000'
+    ttl_maximum_hops: 1
+    bfd_timers:
+      interval: 1000
+      min_rx: 1000
+      multiplier: 10
+    route_reflector_client: true
   address_family_evpn:
     peer_groups:
     - name: WAN-OVERLAY-PEERS
       activate: true
-      route_map_in: RM-EVPN-SOO-IN
-      route_map_out: RM-EVPN-SOO-OUT
+    - name: WAN-RR-OVERLAY-PEERS
+      activate: true
+    next_hop:
+      resolution_disabled: true
   address_family_ipv4:
     peer_groups:
     - name: WAN-OVERLAY-PEERS
       activate: false
+    - name: WAN-RR-OVERLAY-PEERS
+      activate: false
   address_family_path_selection:
     peer_groups:
     - name: WAN-OVERLAY-PEERS
+      activate: true
+    - name: WAN-RR-OVERLAY-PEERS
       activate: true
     bgp:
       additional_paths:
@@ -47,13 +72,13 @@ router_bgp:
         send:
           any: true
   neighbors:
-  - ip_address: 2.2.2.2
-    peer_group: WAN-OVERLAY-PEERS
-    peer: autovpn-rr3
-    description: autovpn-rr3
+  - ip_address: 192.168.131.1
+    peer_group: WAN-RR-OVERLAY-PEERS
+    peer: legacy-autovpn-rr1
+    description: legacy-autovpn-rr1
   vrfs:
   - name: default
-    rd: 192.168.30.1:1
+    rd: 192.168.31.2:1
     route_targets:
       import:
       - address_family: evpn
@@ -64,34 +89,6 @@ router_bgp:
         route_targets:
         - '1:1'
         - route-map RM-EVPN-EXPORT-VRF-DEFAULT
-  - name: IT
-    rd: 192.168.30.1:100
-    route_targets:
-      import:
-      - address_family: evpn
-        route_targets:
-        - 100:100
-      export:
-      - address_family: evpn
-        route_targets:
-        - 100:100
-    router_id: 192.168.30.1
-    redistribute_routes:
-    - source_protocol: connected
-  - name: PROD
-    rd: 192.168.30.1:42
-    route_targets:
-      import:
-      - address_family: evpn
-        route_targets:
-        - '42:42'
-      export:
-      - address_family: evpn
-        route_targets:
-        - '42:42'
-    router_id: 192.168.30.1
-    redistribute_routes:
-    - source_protocol: connected
 service_routing_protocols_model: multi-agent
 ip_routing: true
 aaa_root:
@@ -105,12 +102,9 @@ spanning_tree:
 vrfs:
 - name: MGMT
   ip_routing: false
-- name: IT
-  tenant: TenantA
-  ip_routing: true
-- name: PROD
-  tenant: TenantA
-  ip_routing: true
+platform:
+  sfe:
+    data_plane_cpu_allocation_max: 2
 management_api_http:
   enable_vrfs:
   - name: MGMT
@@ -118,21 +112,20 @@ management_api_http:
 ethernet_interfaces:
 - name: Ethernet1
   peer_type: l3_interface
-  ip_address: dhcp
+  ip_address: 10.8.8.8/31
   shutdown: false
   type: routed
-  description: Comcast_666
-  dhcp_client_accept_default_route: true
+  description: ATT_888
 loopback_interfaces:
 - name: Loopback0
   description: ROUTER_ID
   shutdown: false
-  ip_address: 192.168.30.1/32
+  ip_address: 192.168.31.2/32
 prefix_lists:
 - name: PL-LOOPBACKS-EVPN-OVERLAY
   sequence_numbers:
   - sequence: 10
-    action: permit 192.168.30.0/24 eq 32
+    action: permit 192.168.31.0/24 eq 32
 route_maps:
 - name: RM-CONN-2-BGP
   sequence_numbers:
@@ -141,27 +134,16 @@ route_maps:
     match:
     - ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
     set:
-    - extcommunity soo 192.168.30.1:0 additive
-- name: RM-EVPN-SOO-IN
-  sequence_numbers:
-  - sequence: 10
-    type: deny
-    match:
-    - extcommunity ECL-EVPN-SOO
-  - sequence: 20
-    type: permit
-- name: RM-EVPN-SOO-OUT
-  sequence_numbers:
-  - sequence: 10
-    type: permit
-    set:
-    - extcommunity soo 192.168.30.1:0 additive
+    - extcommunity soo 192.168.31.2:0 additive
 - name: RM-EVPN-EXPORT-VRF-DEFAULT
   sequence_numbers:
   - sequence: 10
     type: permit
     match:
     - extcommunity ECL-EVPN-SOO
+static_routes:
+- destination_address_prefix: 0.0.0.0/0
+  gateway: 10.8.8.9
 agents:
 - name: KernelFib
   environment_variables:
@@ -171,11 +153,11 @@ ip_extcommunity_lists:
 - name: ECL-EVPN-SOO
   entries:
   - type: permit
-    extcommunities: soo 192.168.30.1:0
+    extcommunities: soo 192.168.31.2:0
 ip_security:
   ike_policies:
   - name: AUTOVPN-IKE
-    local_id: 192.168.255.1
+    local_id: 192.168.131.2
   sa_policies:
   - name: AUTOVPN-SA
   profiles:
@@ -189,18 +171,6 @@ ip_security:
       time: 50
       action: clear
     mode: transport
-  key_controller:
-    profile: AUTOVPN
-management_security:
-  ssl_profiles:
-  - name: STUN-DTLS
-    certificate:
-      file: STUN-DTLS.crt
-      key: STUN-DTLS.key
-    trust_certificate:
-      certificates:
-      - aristaDeviceCertProvisionerDefaultRootCA.crt
-    tls_versions: '1.2'
 router_bfd:
   multihop:
     interval: 300
@@ -210,84 +180,102 @@ router_path_selection:
   tcp_mss_ceiling:
     ipv4_segment_size: auto
   path_groups:
+  - name: MPLS
+    id: 100
   - name: INET
     id: 101
     local_interfaces:
     - name: Ethernet1
-      stun:
-        server_profiles:
-        - INET-autovpn-rr3-Ethernet1
-    dynamic_peers:
-      enabled: true
     static_peers:
-    - router_ip: 2.2.2.2
-      name: autovpn-rr3
+    - router_ip: 192.168.131.1
+      name: legacy-autovpn-rr1
       ipv4_addresses:
       - 10.7.7.7
     ipsec_profile: AUTOVPN
+  - name: LTE
+    id: 102
+  peer_dynamic_source: stun
   load_balance_policies:
-  - name: LB-DEFAULT-POLICY-DEFAULT
+  - name: LB-DEFAULT-AUTOVPN-POLICY-CONTROL-PLANE
     path_groups:
     - name: INET
-  - name: LB-DEFAULT-POLICY-CONTROL-PLANE
+      priority: 42
+    - name: MPLS
+  - name: LB-DEFAULT-AUTOVPN-POLICY-IT
+    path_groups:
+    - name: MPLS
+    - name: INET
+      priority: 2
+  - name: LB-PROD-AUTOVPN-POLICY-VOICE
+    path_groups:
+    - name: INET
+  - name: LB-PROD-AUTOVPN-POLICY-VIDEO
+    path_groups:
+    - name: INET
+  - name: LB-PROD-AUTOVPN-POLICY-DEFAULT
     path_groups:
     - name: INET
   policies:
-  - name: DEFAULT-POLICY
-    default_match:
-      load_balance: LB-DEFAULT-POLICY-DEFAULT
-  - name: DEFAULT-POLICY-WITH-CP
+  - name: DEFAULT-AUTOVPN-POLICY-WITH-CP
     rules:
     - id: 10
       application_profile: APP-PROFILE-CONTROL-PLANE
-      load_balance: LB-DEFAULT-POLICY-CONTROL-PLANE
+      load_balance: LB-DEFAULT-AUTOVPN-POLICY-CONTROL-PLANE
+    - id: 20
+      application_profile: IT
+      load_balance: LB-DEFAULT-AUTOVPN-POLICY-IT
+  - name: PROD-AUTOVPN-POLICY
+    rules:
+    - id: 10
+      application_profile: VOICE
+      load_balance: LB-PROD-AUTOVPN-POLICY-VOICE
+    - id: 20
+      application_profile: VIDEO
+      load_balance: LB-PROD-AUTOVPN-POLICY-VIDEO
     default_match:
-      load_balance: LB-DEFAULT-POLICY-DEFAULT
+      load_balance: LB-PROD-AUTOVPN-POLICY-DEFAULT
   vrfs:
-  - name: PROD
-    path_selection_policy: DEFAULT-POLICY
-  - name: IT
-    path_selection_policy: DEFAULT-POLICY
   - name: default
-    path_selection_policy: DEFAULT-POLICY-WITH-CP
+    path_selection_policy: DEFAULT-AUTOVPN-POLICY-WITH-CP
+  - name: PROD
+    path_selection_policy: PROD-AUTOVPN-POLICY
 stun:
-  client:
-    server_profiles:
-    - name: INET-autovpn-rr3-Ethernet1
-      ip_address: 10.7.7.7
-      ssl_profile: STUN-DTLS
+  server:
+    local_interfaces:
+    - Ethernet1
 application_traffic_recognition:
   application_profiles:
+  - name: IT
+  - name: VOICE
+  - name: VIDEO
   - name: APP-PROFILE-CONTROL-PLANE
     applications:
     - name: APP-CONTROL-PLANE
   applications:
     ipv4_applications:
     - name: APP-CONTROL-PLANE
-      dest_prefix_set_name: PFX-PATHFINDERS
+      src_prefix_set_name: PFX-LOCAL-VTEP-IP
   field_sets:
     ipv4_prefixes:
-    - name: PFX-PATHFINDERS
+    - name: PFX-LOCAL-VTEP-IP
       prefix_values:
-      - 2.2.2.2/32
+      - 192.168.131.2/32
 dps_interfaces:
 - name: Dps1
   description: DPS Interface
   mtu: 9194
-  ip_address: 192.168.255.1/32
+  ip_address: 192.168.131.2/32
   flow_tracker:
     hardware: FLOW-TRACKER
 vxlan_interface:
   vxlan1:
-    description: autovpn-edge-no-default-policy_VTEP
+    description: legacy-autovpn-rr2_VTEP
     vxlan:
       udp_port: 4789
       source_interface: Dps1
       vrfs:
       - name: default
         vni: 1
-      - name: IT
-        vni: 100
       - name: PROD
         vni: 42
 flow_tracking:
