--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge3B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge3B.cfg
@@ -209,6 +209,14 @@ ip security
    key controller
       profile DP-PROFILE
 !
+interface Port-Channel52
+   description DIRECT LAN HA LINK
+   no shutdown
+   mtu 9100
+   no switchport
+   flow tracker hardware FLOW-TRACKER
+   ip address 10.10.10.1/31
+!
 interface Dps1
    description DPS Interface
    mtu 9194
@@ -222,11 +230,10 @@ interface Ethernet2
    ip address 172.15.6.6/31
 !
 interface Ethernet52
-   description DIRECT LAN HA LINK
+   description TODO: DIRECT LAN HA LINK MEMBER
    no shutdown
    mtu 9100
-   no switchport
-   ip address 10.10.10.1/31
+   channel-group 52 mode active
 !
 interface Loopback0
    description ROUTER_ID
