--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge3B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge3B.cfg
@@ -110,7 +110,7 @@ router path-selection
       ipsec profile DP-PROFILE
       flow assignment lan
       !
-      local interface Ethernet52
+      local interface Port-Channel52
       !
       peer static router-ip 192.168.142.6
          name cv-pathfinder-edge3A
